...
/// Please, always use below convention:
/// EXAMPLE:
/// static let [name of variable]: String = NSLocalizedString("[Text here]",
///                                             comment: " ")
struct Strings {
    enum Commons {
        static let cancel: String = NSLocalizedString("Cancel",
                                                      comment: "")
        static let ok: String = NSLocalizedString("OK",
                                                  comment: "")
        static let myAccount: String = NSLocalizedString("My account"
                                                         , comment: "")
        static let `continue`: String = NSLocalizedString("Continue",
...
        static let description: String = NSLocalizedString("Record a new session to monitor your health & environment.",
                                                           comment: "")
        static let exploreSessionsDescription: String = NSLocalizedString("Explore & follow existing AirCasting sessions or use your own device to record a new session and monitor your health & environment.",
                                                                          comment: "")
        static let newSession: String = NSLocalizedString("Record new session",
                                                          comment: "")
        static let exploreSessionsButton = NSLocalizedString("Explore existing sessions", comment: "")
    }

    enum ReorderingDashboard {
        static let navigationTitle: String = NSLocalizedString("Reordering", comment: "Navigation title in reordering sessions view")
    }

...
        
        static let syncTitle: String = NSLocalizedString("Sync storage for AirBeam3 or AirBeam Mini",
                                                         comment: "")
        
        static let syncData: String = NSLocalizedString("Sync storage",
                                                               comment: "")
        static let followButtonTitle: String = NSLocalizedString("Follow session search & follow fixed sessions",
                                                                 comment: "")
        static let followSession: String = NSLocalizedString("Follow session",
                                                                       comment: "")
    }
    
    enum MoreInfoPopupView {
...
    enum MainTabBarView {
        static let loggingOut: String = NSLocalizedString("Logging out, please wait...",
                                                          comment: "")
        static let deletingAccount: String = NSLocalizedString("Deleting account, please wait...",
                                                             comment: "")
        static let finished: String = NSLocalizedString("Finished", comment: "")
        static let homeIcon: String = "home"
        static let homeBlueIcon: String = "bluehome"
        static let plusIcon: String = "plus"
        static let plusBlueIcon: String = "blueplus"
        static let settingsIcon: String = "settings"
        static let settingsBlueIcon: String = "bluesettings"
    }
    
    enum DashboardView {
...
                                                              comment: "")
        static let cancelButton: String = NSLocalizedString("Cancel",
                                                            comment: "")
    }

    enum SearchView {
        static let title: String = NSLocalizedString("Search fixed sessions", comment: "")
        static let placeholder: String = NSLocalizedString("Session location", comment: "")
        static let parametersQuestion: String = NSLocalizedString("Which parameter are you intrested in?", comment: "")
        static let sensorQuestion: String = NSLocalizedString("Which sensor are you intrested in?", comment: "")
        static let ozoneText: String = NSLocalizedString("Ozone", comment: "")
        static let particularMatterText: String = NSLocalizedString("Particular matter", comment: "")
    }
...
